tests/baselines/reference/parserModuleDeclaration11.errors.txt
parserModuleDeclaration11.ts(1,16): error TS2819: Namespace name cannot be 'string'.


==== parserModuleDeclaration11.ts (1 errors) ====
    declare module string {
                   ~~~~~~
!!! error TS2819: Namespace name cannot be 'string'.
        interface X { }
        export function foo(s: string);
    }
    string.foo("abc");
    var x: string.X;
    